--- a/ss7_spring_data_repository/bai_tap/dung_spring_boot_ql_sp/src/main/resources/application.properties
+++ b/ss7_spring_data_repository/bai_tap/dung_spring_boot_ql_sp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/product?useSSL=false&useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/module4?useSSL=false&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=016367699433a
 
@@ -8,7 +8,7 @@ spring.datasource.password=016367699433a
 # JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
